# desafio-cientista-dados-senior-dados-integrados

./: .gitignore  .sqlfluff  README.md  desafio.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
registro_municipal_integrado/: .sqlfluff  Makefile  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
registro_municipal_integrado/analyses/: explore_source.sql  explore_turma.sql  test_source.sql  test_values.sql
registro_municipal_integrado/macros/: create_source_views.sql  generate_schema_name.sql
registro_municipal_integrado/models/marts/: mart_educacao__avaliacao_desempenho.sql
registro_municipal_integrado/models/source/: source.yml
registro_municipal_integrado/models/staging/: schema.yml  stg_rmi__aluno.sql  stg_rmi__avaliacao.sql  stg_rmi__escola.sql  stg_rmi__frequencia.sql  stg_rmi__turma.sql
registro_municipal_integrado/tests/: check_data_frequencia.sql
