[project]
name = "desafio-cientista-dados-senior-dados-integrados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "duckdb-cli>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "sqlfluff>=4.1.0",
    "sqlfluff-templater-dbt>=4.1.0",
]
